changes to make things work under 8.12.2 as well as 8.10.2; keep .d file out of git

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -8,7 +8,7 @@
 #                                                                             #
 ###############################################################################
 
-COQMF_VFILES = compcert/Axioms.v compcert/Coqlib.v compcert/Wfsimpl.v compcert/Iteration.v compcert/Maps.v compcert/Lattice.v compcert/Ordered.v compcert/Heaps.v compcert/Kildall.v compcert/Errors.v utils/Defns.v utils/Smallstep.v utils/Behaviours.v pipe/TagDomain.v rtlt/Language.v rtlt/Policy.v rtlt/Semantics.v hll/Language.v hll/Policy.v hll/Semantics.v rtlgent/Inj.v rtlgent/Env.v rtlgent/SEMonad.v rtlgent/Compiler.v pfrtlgent/Inj.v pfrtlgent/Env.v pfrtlgent/Matching.v pfrtlgent/ModelsMatching.v pfrtlgent/Sim.v pfrtlgent/Toplevel.v deadcodet/DeadDomain.v deadcodet/Compiler.v pfdeadcodet/MatchingSim.v cset/CSETdomain.v cset/Compiler.v
+COQMF_VFILES = compcert/Axioms.v compcert/Coqlib.v compcert/Wfsimpl.v compcert/Iteration.v compcert/Maps.v compcert/Lattice.v compcert/Ordered.v compcert/Heaps.v compcert/Kildall.v compcert/Errors.v utils/Defns.v utils/Smallstep.v utils/Behaviours.v pipe/TagDomain.v rtlt/Language.v rtlt/Policy.v rtlt/Semantics.v hll/Language.v hll/Policy.v hll/Semantics.v rtlgent/Inj.v rtlgent/Env.v rtlgent/SEMonad.v rtlgent/Compiler.v pfrtlgent/Inj.v pfrtlgent/Env.v pfrtlgent/Matching.v pfrtlgent/ModelsMatching.v pfrtlgent/Sim.v pfrtlgent/Toplevel.v deadcodet/DeadDomain.v deadcodet/Compiler.v pfdeadcodet/MatchingSim.v pfdeadcodet/TopLevel.v cset/CSETdomain.v cset/Compiler.v
 COQMF_MLIFILES = 
 COQMF_MLFILES = 
 COQMF_MLGFILES = 
